--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,8 @@ body {
   font-weight: 400px;
 }
 
-img {
-  width: 320px;
-}
-
-
 /* header */
+
 header {
   border: 2px solid white;
   margin: 20px 0px;
@@ -36,7 +32,7 @@ header h1 {
   font-size: 26px;
 }
 
-h1 em {
+header h1 em {
   font-weight: 100px;
   color: #2afca6;
 }
@@ -95,7 +91,7 @@ article h1 {
   color: #2afca6;
 }
 
-.text {
+.article-text {
  font-size: 16px;
  line-height: 22px;
 }
