--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ button a {
 footer {
   border: 2px solid #2afca6;
   height: 45px;
+  margin-top: 20px;
 }
 
 footer p {
@@ -140,4 +141,16 @@ footer p {
   text-align: center;
   font-size: 10px;
   margin-top: 15px;
+}
+
+/* article */
+
+
+
+.article-figcaption {
+  height: 20px;
+}
+
+.article-page {
+  padding-top: 30px;
 }
