--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@ body {
 header {
   border: 2px solid white;
   margin: 20px 0px;
-  background-image: url('../img/header-fond.jpg');
   padding: 0px 30px;
+  background-image: url(../img/header-fond.jpg);
 }
 
 header h1 {
@@ -58,11 +58,13 @@ main {
   font-family: 'montserrat', sans-serif;
   font-size: 16px;
   font-weight: 800;
+  color: #0e6848;
 }
 
 .presentation p {
   margin: 20px 0px 31px;
   line-height: 22px;
+  color: #0e6848;
 }
 
 article {
@@ -98,7 +100,7 @@ article h1 {
 
 figure {
   margin: 0px 0px 32px;
-  box-shadow: 2px  2px 2px 2px gray;
+  box-shadow: 0px  0px 4px 4px #e8e8e8;
 }
 
 img {
@@ -113,14 +115,14 @@ figcaption {
 
 button {
   margin: 0px 0px 16px;
-  background-color: black;
+  background-color: #444444;
   border-style: none;
   height: 23px;
   width: 90px;
 }
 
 button a {
-   color: white;
+   color: #ffffff;
    margin: 5px;
    text-decoration: none;
    font-size: 10px;
@@ -153,4 +155,8 @@ footer p {
 
 .article-page {
   padding-top: 30px;
+}
+
+.article-button {
+  width: 125px;
 }
