--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ header {
   border: 2px solid white;
   margin: 20px 0px;
   padding: 0px 30px;
-  background-image: url(../img/header-fond.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+                    url("../img/header-fond.jpg");
 }
 
 header h1 {
